fix: make worker binary runnable
- Fix "file not found" for directories by resolving canonical paths
- Add cmdline arguments for testing
- Configure logback
- Disable deprecation warnings in sbt